# tutor_coding

./: .gitignore  LICENSE  README.md
embed/: env.yml
lf_crlf/: README.md
tutor_c_cpp/: Makefile  README.md
tutor_c_cpp/array_pointer/: CMakeLists.txt  README.md  main.c
tutor_c_cpp/assert/cassert_vs_static_assert/: CMakeLists.txt  Vector.cpp  Vector.h  array_utils.cpp  array_utils.h  main.cpp  tutor_cassert.cpp  tutor_cassert.h  tutor_static_assert.cpp  tutor_static_assert.h
tutor_c_cpp/config-env-vars/: config-env-vars.cmd
tutor_c_cpp/coredump/: Makefile
tutor_c_cpp/function_pointer/: CMakeLists.txt  README.md  main.c
tutor_c_cpp/generic_keyword/: CMakeLists.txt  main.c
tutor_c_cpp/glibc_version/: CMakeLists.txt  glibc-version.c  main.c
tutor_c_cpp/multithreading/mt_c/thread_func_multi_args_in_out/create_consume_str_vectors/: CMakeLists.txt  create_string_copies.h  create_string_vector.c  create_string_vector.h  duplicate_and_concatenate_string.c  duplicate_and_concatenate_string.h  main.c
tutor_c_cpp/multithreading/mt_c/ytb_diana_farhat/circular_array/: CMakeLists.txt  main.c  passing_encapsulated_indexes.c  passing_encapsulated_indexes.h  snellmans_blog.c  snellmans_blog.h  types.h  using_global_indexes.c  using_global_indexes.h
tutor_linux_cli/: usage_examples_cli.md
tutor_makefile/: README.md  copy-thru-ssh-x11.txt  test1.txt  xclip
tutor_python/: conda-releases.txt  scipy-releases.txt  tutor_regex.py
tutor_shell_scripts/: update_scoop_app_install_json.sh
tutor_win_cmd_scripts/: update_scoop_app_install_json.cmd
(+158 files in other folders)
